<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".BookingPage"
        android:id="@+id/bookingpage">

        <!-- Description -->
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="building description"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Available Time Slots"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:id="@+id/buildingHeader"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/indoorreservebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:text="Reserve Indoor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/outdoorreservebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:text="Reserve Outdoor" />
        </LinearLayout>

        <!-- Nested scroll -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/timeSlotsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Time slots added here -->
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</ScrollView>
