<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        />

    <Button
        android:id="@+id/fragment1btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="Map"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:background="#33FFFFFF"/>

    <Button
        android:id="@+id/fragment2btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="Profile"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:background="#33FFFFFF"/>

</RelativeLayout>