<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileView"
    android:id="@+id/profileview">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/profileHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile Page"
            android:textSize="34sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="398dp"
            android:layout_height="283dp"
            android:layout_below="@id/profileHeader"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/idtemplate"
            tools:layout_editor_absoluteY="7dp" />


        <ImageView
            android:id="@+id/photo"
            android:layout_width="65dp"
            android:layout_height="90dp"
            android:layout_below="@id/profileHeader"
            android:layout_marginStart="-375dp"
            android:layout_marginTop="100dp"
            android:layout_toRightOf="@id/imageView"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/uscname"
            android:layout_width="218dp"
            android:layout_height="26dp"
            android:layout_below="@id/profileHeader"
            android:layout_marginStart="125dp"
            android:layout_marginTop="120dp"
            android:text="Student Name"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/uscid"
            android:layout_width="112dp"
            android:layout_height="25dp"
            android:layout_below="@id/uscname"
            android:layout_marginStart="125dp"
            android:layout_marginTop="16dp"
            android:text="123456789"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/uscaffiliation"
            android:layout_width="131dp"
            android:layout_height="28dp"
            android:layout_below="@id/uscname"
            android:layout_marginStart="250dp"
            android:layout_marginTop="16dp"
            android:text="Affiliation"
            android:textSize="20sp" />




        <TextView
            android:id="@+id/upcomingReservationsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginStart="75dp"
            android:layout_marginTop="16dp"
            android:text="Upcoming Reservations"
            android:textSize="24sp" />


        <LinearLayout
            android:id="@+id/upcomingReservationsList"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/upcomingReservationsLabel"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" />


        <TextView
            android:id="@+id/pastReservationsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/upcomingReservationsList"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:text="Past Reservations"
            android:textSize="24sp" />


        <LinearLayout
            android:id="@+id/pastReservationsList"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/pastReservationsLabel"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pastReservationsList"
            android:layout_gravity="center"
            android:layout_marginStart="200dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:layout_marginBottom="100dp"
            android:text="CANCEL ACTIVE" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pastReservationsList"
            android:layout_gravity="center"
            android:layout_marginStart="75dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="LOG OUT" />


    </RelativeLayout>




</ScrollView>
